# codex-switch

./: .gitignore  README.md  pyproject.toml
codex_switch/: __init__.py  cli.py  desktop.py  gui.py  store.py  usage.py
tests/: test_desktop.py  test_store.py
